--- a/index.html
+++ b/index.html
@@ -146,3 +146,7 @@ function showGame(gameId) {
 
 </body>
 </html>
+<iframe src="https://itch.io/embed/PROJECT_ID"
+        width="552"
+        height="167"
+        frameborder="0"></iframe>
