Add coming soon section for demo and style it
Added a coming soon section for the playable demo and styled it.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,16 @@ function showGame(gameId) {
 
 </body>
 </html>
-<iframe src="https://itch.io/embed/PROJECT_ID"
-        width="552"
-        height="167"
-        frameborder="0"></iframe>
+<!-- COMING SOON STEAM PAGE -->
+<div class="coming-soon">
+    <p>🎮 Playable demo coming soon</p>
+    <p>Steam and itch.io pages are currently in development.</p>
+</div>
+.coming-soon {
+    border: 1px dashed #A22C29;
+    padding: 20px;
+    margin-top: 20px;
+    text-align: center;
+    background-color: rgba(162, 44, 41, 0.05);
+}
+
