--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@ function showGame(gameId) {
     document.getElementById(gameId).classList.remove('hidden');
 }
 </script>
+    <!-- HEADER -->
+<header class="hero">
+    <h1>KMCEI Productions</h1>
+    <p>Crafting immersive worlds and meaningful gameplay.</p>
+    <button onclick="showSection('games')">Explore Our Games</button>
+</header>
 
 </body>
 </html>
