--- a/index.html
+++ b/index.html
@@ -158,4 +158,5 @@ function showGame(gameId) {
     <p>Steam and itch.io pages are currently in development.</p>
 </div>
 
-
+<!-- mobile web head -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
