Update contact email to 'loading'

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <!-- CONTACT -->
 <section id="contact" class="content hidden">
     <h2>Contact & Socials</h2>
-    <p>Email: contact@kmcei.com</p>
+    <p>Email: loading</p>
     <p>Twitter / X</p>
     <p>Discord</p>
     <p>YouTube</p>
