--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@ function showGame(gameId) {
 </script>
     <!-- HEADER -->
 <header class="hero">
-    <h1>KMCEI Productions</h1>
+    <div class="logo">
+    KMCEI<span>Productions</span>
+</div>
+
     <p>Crafting immersive worlds and meaningful gameplay.</p>
     <button onclick="showSection('games')">Explore Our Games</button>
 </header>
