--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>KMCEI Productions</title>
     <link rel="stylesheet" href="style.css">
- 
-
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
+
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 <body>
