Revamp header with hero section and tagline
Updated header to include hero section with title, subtitle, and tagline.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 
  <body>
 
-<header>
-    <h1>KMCEI Productions</h1>
-    <p>Crafting games. Building worlds.</p>
+<header class="hero">
+    <div class="hero-text">
+        <h1 class="hero-title">KMCEI</h1>
+        <h2 class="hero-subtitle">Productions</h2>
+        <p class="hero-tagline">
+            Forging stories from every realm into the living fabric of interactive gameplay.
+        </p>
+    </div>
 </header>
+
 
 <nav>
     <button onclick="showSection('games')">Games</button>
