Replace buttons with anchor tags in navigation

--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 </header>
 
 
-<nav>
-    <button onclick="showSection('games')">Games</button>
-    <button onclick="showSection('about')">About</button>
-    <button onclick="showSection('media')">Media</button>
-    <button onclick="showSection('news')">Devlogs</button>
-    <button onclick="showSection('merch')">Merch</button>
-    <button onclick="showSection('contact')">Contact</button>
+<nav class="top-nav">
+    <a href="#" onclick="showSection('games')">Games</a>
+    <a href="#" onclick="showSection('about')">About</a>
+    <a href="#" onclick="showSection('media')">Media</a>
+    <a href="#" onclick="showSection('news')">Devlogs</a>
+    <a href="#" onclick="showSection('merch')">Merch</a>
+    <a href="#" onclick="showSection('contact')">Contact</a>
 </nav>
+
 
 <main>
 
