Add media gallery with lightbox feature
Added a media gallery section with images and lightbox functionality.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
 
 
 <main>
+    <!-- Gallery -->
+<section id="media" class="content">
+    <h2>Media</h2>
+
+    <div class="gallery">
+        <img src="images/gallery/game1-1.jpg" onclick="openLightbox(this.src)">
+        <img src="images/gallery/game1-2.jpg" onclick="openLightbox(this.src)">
+        <img src="images/gallery/game2-1.jpg" onclick="openLightbox(this.src)">
+    </div>
+</section>
+
+<div id="lightbox" onclick="closeLightbox()">
+    <img id="lightbox-img">
+</div>
 
 <!-- GAMES -->
 <section id="games" class="content">
