--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         </div>
     </div>
 </section>
+<div id="lightbox" class="lightbox hidden">
+  <img id="lightbox-img">
+</div>
 
 
 <!-- NEWS -->
