Update image sources in media gallery

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <h2>Media</h2>
 
     <div class="gallery">
-        <img src="images/gallery/game1-1.jpg" onclick="openLightbox(this.src)">
-        <img src="images/gallery/game1-2.jpg" onclick="openLightbox(this.src)">
-        <img src="images/gallery/game2-1.jpg" onclick="openLightbox(this.src)">
+        <img src="images/gallery/gallery1.jpg" onclick="openLightbox(this.src)">
+        <img src="images/gallery/gallery2.jpg" onclick="openLightbox(this.src)">
+        <img src="images/gallery/gallery1.jpg" onclick="openLightbox(this.src)">
     </div>
 </section>
 
