--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <a href="#" onclick="showSection('news')">Devlogs</a>
     <a href="#" onclick="showSection('merch')">Merch</a>
     <a href="#" onclick="showSection('contact')">Contact</a>
+    <a href="#" onclick="showSection('trailers')">Trailers</a>
 </nav>
 
 
@@ -71,7 +72,7 @@
 </section>
 
 <!-- MEDIA -->
-<section id="media" class="content">
+<section id="trailer" class="trailer">
 
     <h2>Screenshots & Trailers</h2>
 
