Fix duplicate image entry in gallery

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <img src="images/gallery/gallery1.jpg" onclick="openLightbox(this.src)">
         <img src="images/gallery/gallery2.jpg" onclick="openLightbox(this.src)">
         <img src="images/gallery/gallery1.jpg" onclick="openLightbox(this.src)">
+        <img src="images/gallery/gallery2.jpg" onclick="openLightbox(this.src)">
     </div>
 </section>
 
