--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 </section>
 
 <!-- MEDIA -->
-<section id="trailer" class="trailer">
+<section id="media" class="content hidden">
+
 
     <h2>Screenshots & Trailers</h2>
 
