--- a/index.html
+++ b/index.html
@@ -207,13 +207,21 @@ function closeLightbox() {
   <!-- your sections here -->
 
   <script>
-  function showSection(id) {
-    document.querySelectorAll('.content').forEach(section => {
-      section.classList.add('hidden');
-    });
-    document.getElementById(id).classList.remove('hidden');
-  }
-  </script>
+function showSection(id) {
+  document.querySelectorAll('.content').forEach(section => {
+    section.classList.add('hidden');
+  });
+  document.getElementById(id).classList.remove('hidden');
+}
+
+function showGame(gameId) {
+  document.querySelectorAll('.game-content').forEach(game => {
+    game.classList.add('hidden');
+  });
+  document.getElementById(gameId).classList.remove('hidden');
+}
+</script>
+
 
 </body>
 </html>
