--- a/index.html
+++ b/index.html
@@ -221,14 +221,15 @@ function showGame(gameId) {
   document.getElementById(gameId).classList.remove('hidden');
 }
 </script>
+<div id="lightbox">
+  <img id="lightbox-img">
+</div>
 
 
 </body>
 </html>
 
      
-</body>
-</html>
 
 
 
