--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </div>
 
 
-  <!-- Project A -->
+  <!-- Project A, both B too, technically media --> 
   <div id="game1" class="game-content">
     <h3>Project A</h3>
     <p>In Development</p>
@@ -103,6 +103,11 @@
   </div>
 </section>
 
+<section id="media" class="content hidden">
+  <div class="media-scroll">
+    <!-- everything in media goes here -->
+  </div>
+</section>
 
 
 <!-- NEWS -->
