--- a/index.html
+++ b/index.html
@@ -132,6 +132,16 @@
     <h2>Merch Store</h2>
     <p>🚧 Store is currently unavailable. Check back soon.</p>
 </section>
+<section id="merch" class="content hidden">
+  <h2>Merch Store</h2>
+
+  <div class="merch-row">
+    <div class="merch-card">Item 1</div>
+    <div class="merch-card">Item 2</div>
+    <div class="merch-card">Item 3</div>
+    <div class="merch-card">Item 4</div>
+  </div>
+</section>
 
 <!-- CONTACT -->
 <section id="contact" class="content hidden">
