--- a/index.html
+++ b/index.html
@@ -252,11 +252,23 @@ function showSection(id) {
 }
 </script>
 
-
-     
-<div id="lightbox">
+<!-- yLIGHTBOXXXX -->
+<div id="lightbox" class="hidden" onclick="closeLightbox()">
   <img id="lightbox-img">
 </div>
+<script>
+function openLightbox(src) {
+  const lightbox = document.getElementById('lightbox');
+  const img = document.getElementById('lightbox-img');
+  img.src = src;
+  lightbox.classList.remove('hidden');
+}
+
+function closeLightbox() {
+  document.getElementById('lightbox').classList.add('hidden');
+}
+</script>
+
 
      
 <script>
