--- a/index.html
+++ b/index.html
@@ -66,25 +66,27 @@
     <button class="tab" onclick="showGame('game2', this)">Project B</button>
   </div>
 
-  <div class="game-content" id="game1">
-    <h3>Project A</h3>
-    <p>In Development</p>
+  <div class="media-scroll">
+    <div id="game1" class="game-content">
+      <h3>Project A</h3>
+      <p>In Development</p>
 
-    <div class="gallery">
-      <img src="images/gallery/gallery1.jpg" onclick="openLightbox(this.src)">
-      <img src="images/gallery/gallery2.jpg" onclick="openLightbox(this.src)">
+      <div class="gallery">
+        <img src="images/gallery/gallery1.jpg" onclick="openLightbox(this.src)">
+        <img src="images/gallery/gallery/gallery2.jpg" onclick="openLightbox(this.src)">
+      </div>
+
+      <iframe
+        data-src="https://www.youtube.com/embed/VIDEO_ID"
+        src=""
+        allowfullscreen>
+      </iframe>
     </div>
 
-    <iframe
-      data-src="https://www.youtube.com/embed/VIDEO_ID"
-      frameborder="0"
-      allowfullscreen>
-    </iframe>
-  </div>
-
-  <div class="game-content hidden" id="game2">
-    <h3>Project B</h3>
-    <p>In Development</p>
+    <div id="game2" class="game-content hidden">
+      <h3>Project B</h3>
+      <p>In Development</p>
+    </div>
   </div>
 </section>
 
@@ -108,10 +110,8 @@
 
 <!-- MERCH -->
 <section id="merch" class="content hidden">
-    <h2>Merch Store</h2>
-    <p>🚧 Store is currently unavailable. Check back soon.</p>
-</section>
- <h2>Merch Store</h2>
+  <h2>Merch Store</h2>
+  <p>🚧 Store is currently unavailable. Check back soon.</p>
 
   <div class="merch-row">
     <div class="merch-card">Item 1</div>
@@ -120,6 +120,7 @@
     <div class="merch-card">Item 4</div>
   </div>
 </section>
+
 
 <!-- CONTACT -->
 <section id="contact" class="content hidden">
