--- a/index.html
+++ b/index.html
@@ -1,321 +1,202 @@
-<!--
-  KMCEI Productions — Cleaned + Labeled (single-file HTML)
-  ✅ Fixes:
-  - Removed duplicate headers / duplicate lightbox / broken scripts
-  - ONE showSection(), ONE showGame(), ONE lightbox handler, ONE lazy loader
-  - Default visible section on load (Games)
-  - Smooth fade-ready (uses .hidden only; your CSS can also use .active if you want)
-  - Fixed broken image path: images/gallery/gallery/gallery2.jpg -> images/gallery/gallery2.jpg
-  - Prevents # links from jumping to the top
-  - Viewport meta moved into <head> (correct place)
-
-  NOTE:
-  - Replace VIDEO_ID with your real YouTube ID
-  - Make sure your files exist:
-      images/gallery/gallery1.jpg
-      images/gallery/gallery2.jpg
--->
-
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- ======================================================
+  HEAD
+====================================================== -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>KMCEI Productions</title>
+
+  <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
+  <!-- Smooth scroll -->
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 
 <body>
 
-  <!-- =========================
-       HERO HEADER
-  ========================== -->
-  <header class="hero">
-    <div class="hero-text">
-      <h1 class="hero-title">KMCEI</h1>
-      <h2 class="hero-subtitle">Productions</h2>
-      <p class="hero-tagline">
-        Forging stories from every realm into the living fabric of interactive gameplay.
-      </p>
+<!-- ======================================================
+  HERO / LANDING (PARALLAX + CAROUSEL)
+====================================================== -->
+<header class="hero">
+  <div class="hero-bg"></div>
 
-      <!-- Optional CTA -->
-      <button type="button" class="hero-cta" data-section="games">
-        Explore Our Games
-      </button>
+  <div class="hero-content">
+    <h1 class="hero-title">KMCEI Productions</h1>
+
+    <p class="hero-tagline active">
+      Forging stories from every realm into the living fabric of interactive gameplay.
+    </p>
+    <p class="hero-tagline">
+      Etching our hearts and minds into the digital ether.
+    </p>
+    <p class="hero-tagline">
+      Independent worlds. Intentional design.
+    </p>
+
+    <a href="#games" class="hero-cta">Explore Our Games</a>
+  </div>
+</header>
+
+<!-- ======================================================
+  TOP NAVIGATION
+====================================================== -->
+<nav class="top-nav">
+  <a href="#games">Games</a>
+  <a href="#about">About</a>
+  <a href="#team">Team</a>
+  <a href="#media">Media</a>
+  <a href="#news">Devlogs</a>
+  <a href="#merch">Merch</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<!-- ======================================================
+  MAIN CONTENT
+====================================================== -->
+<main>
+
+<!-- ======================================================
+  GAMES – GLASS / STEAM-STYLE CARDS
+====================================================== -->
+<section id="games" class="section">
+  <h2>Our Games</h2>
+
+  <div class="game-grid">
+
+    <article class="glass-card game-card">
+      <img src="images/game1.jpg" alt="Project A">
+      <div class="card-info">
+        <h3>Project A</h3>
+        <p>In Development</p>
+      </div>
+    </article>
+
+    <article class="glass-card game-card">
+      <img src="images/game2.jpg" alt="Project B">
+      <div class="card-info">
+        <h3>Project B</h3>
+        <p>In Development</p>
+      </div>
+    </article>
+
+  </div>
+</section>
+
+<!-- ======================================================
+  ABOUT
+====================================================== -->
+<section id="about" class="section">
+  <h2>About KMCEI</h2>
+  <p>
+    KMCEI Productions is an independent game studio focused on
+    narrative-driven interactive experiences.
+  </p>
+</section>
+
+<!-- ======================================================
+  TEAM – GLASSMORPHIC + ANIMATED
+====================================================== -->
+<section id="team" class="section">
+  <h2>Core Team</h2>
+
+  <div class="team-grid">
+
+    <div class="glass-card team-card">
+      <img src="images/team/luvelre.jpg" alt="Luvelre">
+      <h3>Luvelre N.</h3>
+      <p>Narrative Designer & Lead Scriptwriter</p>
     </div>
-  </header>
 
-  <!-- =========================
-       TOP NAV
-  ========================== -->
-  <nav class="top-nav">
-    <a href="#" data-section="games">Games</a>
-    <a href="#" data-section="about">About</a>
-    <a href="#" data-section="media">Media</a>
-    <a href="#" data-section="news">Devlogs</a>
-    <a href="#" data-section="merch">Merch</a>
-    <a href="#" data-section="contact">Contact</a>
-  </nav>
+    <div class="glass-card team-card">
+      <img src="images/team/milo.jpg" alt="Milo">
+      <h3>Milo G.</h3>
+      <p>Lead Visual Artist & Animation Director</p>
+    </div>
 
-  <!-- =========================
-       MAIN CONTENT
-  ========================== -->
-  <main>
+    <div class="glass-card team-card">
+      <img src="images/team/kevin.jpg" alt="Kevin">
+      <h3>Kevin N.</h3>
+      <p>Lead Technical Designer & Full-Stack Developer</p>
+    </div>
 
-    <!-- ===== GAMES (default visible) ===== -->
-    <section id="games" class="content">
-      <h2>Our Games</h2>
-      <p>All titles are currently under production.</p>
+    <div class="glass-card team-card">
+      <img src="images/team/konneaqua.jpg" alt="KonneAqua">
+      <h3>KonneAqua</h3>
+      <p>Audio Director & Lead Composer</p>
+    </div>
 
-      <div class="card">
-        <h3>Game Title Placeholder</h3>
-        <p>Status: In Development</p>
-      </div>
-
-      <!-- Optional: Coming Soon block (kept inside Games only) -->
-      <div class="coming-soon">
-        <p>🎮 Playable demo coming soon</p>
-        <p>Steam pages are currently in development.</p>
-      </div>
-    </section>
-
-    <!-- ===== ABOUT ===== -->
-    <section id="about" class="content hidden">
-      <h2>About KMCEI Productions</h2>
-
-      <h3>Who We Are</h3>
-      <p>[Editable]</p>
-
-      <h3>The Games We Make</h3>
-      <p>[Editable]</p>
-
-      <h3>Our Vision</h3>
-      <p>[Editable]</p>
-    </section>
-
-    <!-- ===== MEDIA ===== -->
-    <section id="media" class="content hidden">
-      <h2>Screenshots &amp; Trailers</h2>
-
-      <!-- Tabs -->
-      <div class="tabs">
-        <button type="button" class="tab active" data-game="game1">Project A</button>
-        <button type="button" class="tab" data-game="game2">Project B</button>
-      </div>
-
-      <!-- Scroll container (vertical scroll wheel) -->
-      <div class="media-scroll">
-
-        <!-- Project A -->
-        <div id="game1" class="game-content">
-          <h3>Project A</h3>
-          <p>In Development</p>
-
-          <div class="gallery">
-            <img src="images/gallery/gallery1.jpg" alt="Project A screenshot 1" />
-            <img src="images/gallery/gallery2.jpg" alt="Project A screenshot 2" />
-          </div>
-
-          <!-- Lazy-load trailer -->
-          <iframe
-            title="Project A Trailer"
-            data-src="https://www.youtube.com/embed/VIDEO_ID"
-            src=""
-            loading="lazy"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-          </iframe>
-        </div>
-
-        <!-- Project B -->
-        <div id="game2" class="game-content hidden">
-          <h3>Project B</h3>
-          <p>In Development</p>
-
-          <!-- Example gallery placeholders (optional) -->
-          <!--
-          <div class="gallery">
-            <img src="images/gallery/b1.jpg" alt="Project B screenshot 1" />
-            <img src="images/gallery/b2.jpg" alt="Project B screenshot 2" />
-          </div>
-
-          <iframe
-            title="Project B Trailer"
-            data-src="https://www.youtube.com/embed/VIDEO_ID_2"
-            src=""
-            loading="lazy"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-          </iframe>
-          -->
-        </div>
-
-      </div>
-    </section>
-
-    <!-- ===== NEWS / DEVLOGS ===== -->
-    <section id="news" class="content hidden">
-      <h2>News &amp; Devlogs</h2>
-
-      <article class="devlog" data-date="2026-01-01">
-        <h3>Devlog #1</h3>
-        <p><small>January 2026</small></p>
-        <p>Development has officially begun.</p>
-      </article>
-
-      <article class="devlog" data-date="2025-12-01">
-        <h3>Devlog #0</h3>
-        <p><small>December 2025</small></p>
-        <p>Studio formation announcement.</p>
-      </article>
-    </section>
-
-    <!-- ===== MERCH ===== -->
-    <section id="merch" class="content hidden">
-      <h2>Merch Store</h2>
-      <p>🚧 Store is currently unavailable. Check back soon.</p>
-
-      <!-- Landscape scroll wheel (horizontal) -->
-      <div class="merch-row">
-        <div class="merch-card">Item 1</div>
-        <div class="merch-card">Item 2</div>
-        <div class="merch-card">Item 3</div>
-        <div class="merch-card">Item 4</div>
-      </div>
-    </section>
-
-    <!-- ===== CONTACT ===== -->
-    <section id="contact" class="content hidden">
-      <h2>Contact &amp; Socials</h2>
-      <p>Email: loading</p>
-      <p>Twitter / X</p>
-      <p>Discord</p>
-      <p>YouTube</p>
-    </section>
-
-  </main>
-
-  <!-- =========================
-       FOOTER
-  ========================== -->
-  <footer>
-    <p>© 2026 KMCEI Productions</p>
-  </footer>
-
-  <!-- =========================
-       SPONSOR BAR (ad border bottom)
-       (If you want it fixed to bottom, do it in CSS)
-  ========================== -->
-  <div class="sponsor-bar">
-    <span class="label">Supported by</span> <span class="name">Partner Studio</span>
   </div>
+</section>
 
-  <!-- =========================
-       LIGHTBOX (ONLY ONE)
-  ========================== -->
-  <div id="lightbox" class="hidden" aria-hidden="true">
-    <img id="lightbox-img" alt="Expanded media" />
+<!-- ======================================================
+  MEDIA
+====================================================== -->
+<section id="media" class="section">
+  <h2>Screenshots & Trailers</h2>
+
+  <div class="gallery">
+    <img src="images/gallery/gallery1.jpg" alt="Screenshot">
+    <img src="images/gallery/gallery2.jpg" alt="Screenshot">
   </div>
+</section>
 
-  <!-- =========================
-       JAVASCRIPT (ONLY ONE BLOCK)
-  ========================== -->
-  <script>
-    // ---------- Helpers ----------
-    function setHidden(el, hidden) {
-      if (!el) return;
-      el.classList.toggle('hidden', hidden);
-    }
+<!-- ======================================================
+  DEVLOGS
+====================================================== -->
+<section id="news" class="section">
+  <h2>Devlogs</h2>
+  <article class="glass-card">
+    <h3>Devlog #1</h3>
+    <p>Development has officially begun.</p>
+  </article>
+</section>
 
-    // ---------- Section navigation ----------
-    function showSection(id) {
-      document.querySelectorAll('.content').forEach(section => {
-        setHidden(section, true);
-      });
+<!-- ======================================================
+  MERCH
+====================================================== -->
+<section id="merch" class="section">
+  <h2>Merch Store</h2>
+  <p>Coming soon.</p>
+</section>
 
-      const target = document.getElementById(id);
-      if (!target) return;
+<!-- ======================================================
+  CONTACT
+====================================================== -->
+<section id="contact" class="section">
+  <h2>Contact</h2>
+  <p>Email: coming soon</p>
+</section>
 
-      setHidden(target, false);
+</main>
 
-      // If entering media, lazy-load trailer for visible game
-      if (id === 'media') {
-        lazyLoadVisibleTrailer();
-      }
-    }
+<!-- ======================================================
+  FOOTER
+====================================================== -->
+<footer>
+  © 2026 KMCEI Productions
+</footer>
 
-    // ---------- Media tabs ----------
-    function showGame(gameId, btn) {
-      document.querySelectorAll('.game-content').forEach(g => setHidden(g, true));
-      const game = document.getElementById(gameId);
-      setHidden(game, false);
+<!-- ======================================================
+  HERO TEXT CAROUSEL SCRIPT
+====================================================== -->
+<script>
+  const lines = document.querySelectorAll('.hero-tagline');
+  let index = 0;
 
-      document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-      if (btn) btn.classList.add('active');
-
-      lazyLoadVisibleTrailer();
-    }
-
-    // ---------- Lazy-load visible trailer ----------
-    function lazyLoadVisibleTrailer() {
-      document
-        .querySelectorAll('.game-content:not(.hidden) iframe[data-src]')
-        .forEach(iframe => {
-          if (!iframe.getAttribute('src')) {
-            iframe.setAttribute('src', iframe.getAttribute('data-src'));
-          }
-        });
-    }
-
-    // ---------- Lightbox ----------
-    function openLightbox(src) {
-      const lightbox = document.getElementById('lightbox');
-      const img = document.getElementById('lightbox-img');
-      img.src = src;
-      lightbox.classList.remove('hidden');
-      lightbox.setAttribute('aria-hidden', 'false');
-    }
-
-    function closeLightbox() {
-      const lightbox = document.getElementById('lightbox');
-      lightbox.classList.add('hidden');
-      lightbox.setAttribute('aria-hidden', 'true');
-    }
-
-    // ---------- Wire up events ----------
-    // Prevent # from jumping, and use data-section navigation
-    document.querySelectorAll('.top-nav a[data-section]').forEach(link => {
-      link.addEventListener('click', (e) => {
-        e.preventDefault();
-        showSection(link.dataset.section);
-      });
-    });
-
-    // Hero CTA
-    const heroCta = document.querySelector('.hero-cta');
-    if (heroCta) {
-      heroCta.addEventListener('click', () => showSection('games'));
-    }
-
-    // Tabs
-    document.querySelectorAll('.tab[data-game]').forEach(btn => {
-      btn.addEventListener('click', () => showGame(btn.dataset.game, btn));
-    });
-
-    // Gallery click → lightbox
-    document.querySelectorAll('.gallery img').forEach(img => {
-      img.addEventListener('click', () => openLightbox(img.src));
-    });
-
-    // Lightbox click closes
-    document.getElementById('lightbox').addEventListener('click', closeLightbox);
-
-    // ---------- Initial state ----------
-    // Show Games by default
-    showSection('games');
-  </script>
+  setInterval(() => {
+    lines.forEach(l => l.classList.remove('active'));
+    index = (index + 1) % lines.length;
+    lines[index].classList.add('active');
+  }, 4000);
+</script>
 
 </body>
 </html>
