Update index.htmlformatted properly by chat

--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="dark">
 
 <!-- ======================================================
-  HERO HEADER (REVERTED, CLEAN)
+  LIGHT / DARK TOGGLE (TOP RIGHT – BEST UX)
 ====================================================== -->
-<header class="hero">
+<button id="themeToggle" aria-label="Toggle theme">
+  🌙
+</button>
+
+<!-- ======================================================
+  HERO HEADER (ORIGINAL STYLE)
+====================================================== -->
+<header class="hero fade-in">
   <div class="hero-text">
     <h1 class="hero-title">KMCEI</h1>
     <h2 class="hero-subtitle">Productions</h2>
@@ -34,7 +41,7 @@
 <!-- ======================================================
   TOP NAVIGATION
 ====================================================== -->
-<nav class="top-nav">
+<nav class="top-nav fade-in delay-1">
   <a href="#" data-section="games">Games</a>
   <a href="#" data-section="about">About</a>
   <a href="#" data-section="media">Media</a>
@@ -48,15 +55,15 @@
 <main>
 
 <!-- ======================================================
-  GAMES — STEAM-STYLE HOVER CARDS
+  GAMES — STEAM-STYLE + TRAILER MODAL
 ====================================================== -->
-<section id="games" class="content">
+<section id="games" class="content fade-in delay-2">
   <h2>Our Games</h2>
 
   <div class="game-grid">
 
     <!-- Game Card -->
-    <div class="game-card">
+    <div class="game-card" data-trailer="https://www.youtube.com/embed/VIDEO_ID">
       <img src="images/gallery/gallery1.jpg" alt="Project A">
       <div class="game-overlay">
         <h3>Project A</h3>
@@ -64,7 +71,7 @@
       </div>
     </div>
 
-    <div class="game-card">
+    <div class="game-card" data-trailer="https://www.youtube.com/embed/VIDEO_ID">
       <img src="images/gallery/gallery2.jpg" alt="Project B">
       <div class="game-overlay">
         <h3>Project B</h3>
@@ -83,18 +90,19 @@
 <!-- ======================================================
   ABOUT
 ====================================================== -->
-<section id="about" class="content hidden">
+<section id="about" class="content hidden fade-in">
   <h2>About KMCEI Productions</h2>
   <p>
-    KMCEI Productions is an independent game studio focused on
-    narrative-driven interactive experiences.
+    KMCEI Productions is an independent game studio dedicated to
+    crafting narrative-driven interactive experiences with intention,
+    emotion, and lasting impact.
   </p>
 </section>
 
 <!-- ======================================================
   MEDIA
 ====================================================== -->
-<section id="media" class="content hidden">
+<section id="media" class="content hidden fade-in">
   <h2>Screenshots</h2>
 
   <div class="gallery">
@@ -106,7 +114,7 @@
 <!-- ======================================================
   DEVLOGS
 ====================================================== -->
-<section id="news" class="content hidden">
+<section id="news" class="content hidden fade-in">
   <h2>Devlogs</h2>
 
   <article class="card">
@@ -118,7 +126,7 @@
 <!-- ======================================================
   MERCH
 ====================================================== -->
-<section id="merch" class="content hidden">
+<section id="merch" class="content hidden fade-in">
   <h2>Merch Store</h2>
   <p>Coming soon.</p>
 </section>
@@ -126,16 +134,19 @@
 </main>
 
 <!-- ======================================================
-  BOTTOM BRANDING (INTENTIONAL SPACING)
+  BRANDING + POETIC LINE (BOTTOM)
 ====================================================== -->
 <section class="branding">
   <h2>KMCEI Productions</h2>
+  <p class="brand-line">
+    Etching our hearts and minds into the digital ether.
+  </p>
 </section>
 
 <!-- ======================================================
-  CORE TEAM (BOTTOM)
+  CORE TEAM (BOTTOM, HOVER SOCIALS)
 ====================================================== -->
-<section class="team-section">
+<section class="team-section fade-in delay-3">
 
   <h2>Core Team</h2>
 
@@ -145,24 +156,44 @@
       <img src="images/team/luvelre.jpg" alt="Luvelre">
       <h3>Luvelre N.</h3>
       <p>Narrative Designer & Lead Scriptwriter</p>
+
+      <div class="team-socials">
+        <a href="#">𝕏</a>
+        <a href="#">✦</a>
+      </div>
     </div>
 
     <div class="team-card">
       <img src="images/team/milo.jpg" alt="Milo">
       <h3>Milo G.</h3>
       <p>Lead Visual Artist & Animation Director</p>
+
+      <div class="team-socials">
+        <a href="#">📷</a>
+        <a href="#">🎨</a>
+      </div>
     </div>
 
     <div class="team-card">
       <img src="images/team/kevin.jpg" alt="Kevin">
       <h3>Kevin N.</h3>
       <p>Lead Technical Designer & Full-Stack Developer</p>
+
+      <div class="team-socials">
+        <a href="#">💻</a>
+        <a href="#">🔗</a>
+      </div>
     </div>
 
     <div class="team-card">
       <img src="images/team/konneaqua.jpg" alt="KonneAqua">
       <h3>KonneAqua</h3>
       <p>Audio Director & Lead Composer</p>
+
+      <div class="team-socials">
+        <a href="#">🎵</a>
+        <a href="#">▶</a>
+      </div>
     </div>
 
   </div>
@@ -176,24 +207,71 @@
 </footer>
 
 <!-- ======================================================
-  JAVASCRIPT — SECTION SWITCHING
+  TRAILER MODAL
+====================================================== -->
+<div id="trailerModal" class="modal hidden">
+  <div class="modal-content">
+    <button class="close-modal">✕</button>
+    <iframe src="" allowfullscreen></iframe>
+  </div>
+</div>
+
+<!-- ======================================================
+  JAVASCRIPT
 ====================================================== -->
 <script>
-  function showSection(id) {
-    document.querySelectorAll('.content').forEach(sec =>
-      sec.classList.add('hidden')
-    );
-    document.getElementById(id)?.classList.remove('hidden');
+/* ---------------------------
+  Section Switching
+--------------------------- */
+function showSection(id) {
+  document.querySelectorAll('.content').forEach(sec =>
+    sec.classList.add('hidden')
+  );
+  document.getElementById(id)?.classList.remove('hidden');
+}
+
+document.querySelectorAll('[data-section]').forEach(link => {
+  link.onclick = e => {
+    e.preventDefault();
+    showSection(link.dataset.section);
+  };
+});
+
+showSection('games');
+
+/* ---------------------------
+  Light / Dark Toggle
+--------------------------- */
+const toggle = document.getElementById('themeToggle');
+toggle.onclick = () => {
+  document.body.classList.toggle('light');
+  toggle.textContent = document.body.classList.contains('light') ? '🌞' : '🌙';
+};
+
+/* ---------------------------
+  Trailer Modal Logic
+--------------------------- */
+const modal = document.getElementById('trailerModal');
+const iframe = modal.querySelector('iframe');
+
+document.querySelectorAll('.game-card').forEach(card => {
+  card.onclick = () => {
+    iframe.src = card.dataset.trailer;
+    modal.classList.remove('hidden');
+  };
+});
+
+document.querySelector('.close-modal').onclick = () => {
+  iframe.src = '';
+  modal.classList.add('hidden');
+};
+
+modal.onclick = e => {
+  if (e.target === modal) {
+    iframe.src = '';
+    modal.classList.add('hidden');
   }
-
-  document.querySelectorAll('[data-section]').forEach(link => {
-    link.onclick = e => {
-      e.preventDefault();
-      showSection(link.dataset.section);
-    };
-  });
-
-  showSection('games');
+};
 </script>
 
 </body>
